# cherenkov-simulator

./: .gitignore  CMakeLists.txt  Config.xml  Config1.xml  ExternalLib.cmake  Main.cpp  Main1.cpp  README.md  ReadMe.txt  accuracy_estimator.cpp  common.cpp  common.h  config.txt  config.xml  data_containers.h  geometric_objects.cpp  geometric_objects.h  main.cpp  shower_simulator.cpp  simulator.h
CherenkovSimulator/: Common.cpp  Common.h  DataContainers.h  FFT.h  FourierTransformTutorial.cpp  GeometricObjects.cpp  GeometricObjects.h  Main.cpp  Prefix.pch  Reconstruction.cpp  Reconstruction.h  ShowerSimulator.h  TAnalysis.cpp  TAnalysis.h  TAnalysis.hpp  TCamera.cpp  TCamera.h  TCamera.hpp  TConstantIntensity.cpp  TConstantIntensity.hpp  TCoordinates.cpp  TCoordinates.h  TCoordinates.hpp  TDetector.cpp  TDetectorOld.h  THistogramArray.cpp  THistogramArray.h  THistogramArray.hpp  THistogramList.cpp  THistogramList.hpp  TMirror.cpp  TMirror.h  TMirror.hpp  TObservatory.cpp  TObservatory.h  TObservatory.hpp  TPixelData.cpp  TPixelData.h  TPixelData.hpp  TPixelHistograms.cpp  (+49 more)
CherenkovSimulator.xcodeproj/: project.pbxproj
CherenkovSimulator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CherenkovSimulator.xcodeproj/project.xcworkspace/xcuserdata/Matthew.xcuserdatad/: UserInterfaceState.xcuserstate
CherenkovSimulator.xcodeproj/xcuserdata/Matthew.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CherenkovSimulator.xcodeproj/xcuserdata/Matthew.xcuserdatad/xcschemes/: CherenkovSimulator.xcscheme  RayTracing.xcscheme  xcschememanagement.plist
CherenkovSimulatorOld/: TAnalysis.cpp  TAnalysis.hpp  TCamera.cpp  TConstantIntensity.hpp  TCoordinates.hpp  TMirror.hpp  TObservatory.cpp  TPixelData.cpp  TPixelData.hpp  TPlane3.hpp  TPoissonDistribution.cpp  TPoissonDistribution.hpp  TRawData.hpp  TRay.hpp  TResponseFunction.cpp  TResponseFunction.hpp  TSegmentedData.cpp  TSegmentedData.hpp  TSurroundings.cpp  TUtility.hpp
Output/: camera-data.root  output.root  point-images.root  point-test.root  response-histogram.root  rms-output.root  shower-path.root  view_shower_output.root  voltage-data.root
RayTracing/: Main.cpp  Ray.cpp  T3DScalarFunction.h  TAnalysis.cpp  TAnalysis.h  TArrayList.cpp  TArrayList.h  TCamera.cpp  TCamera.h  TConstantIntensity.h  TDataCollection.cpp  TDataCollection.h  TDataPoint.cpp  TDataPoint.h  TPlane3.cpp  TPlane3.h  TRay.cpp  TRay.h  TSegmentedData.cpp  TSegmentedData.h  TShower.cpp  TShower.h  TTelescope.cpp  TTelescope.h  Telescope.cpp  main.cpp
RayTracing.xcodeproj/: project.pbxproj
RayTracing.xcodeproj/project.xcworkspace/xcuserdata/Matthew.xcuserdatad/: UserInterfaceState.xcuserstate
RayTracing.xcodeproj/xcuserdata/Matthew.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
RayTracing.xcodeproj/xcuserdata/Matthew.xcuserdatad/xcschemes/: RayTracing.xcscheme
cherenkov_lib/: Analysis.cpp  Analysis.h  CMakeLists.txt  DataStructures.cpp  DataStructures.h  Geometric.cpp  Geometric.h  MonteCarlo.cpp  MonteCarlo.h  Reconstructor.cpp  Reconstructor.h  Reconstructor1.cpp  Simulator.cpp  Simulator.h  Simulator1.cpp  Simulator1.h  Utility.cpp  Utility.h  Utility1.cpp
cherenkov_library/: CMakeLists.txt  ExternalLibraries.cmake  Reconstructor.cpp  analysis.cpp  common.cpp  common.h  data_analysis.cpp  data_analysis.h  data_containers.cpp  data_containers.h  geometric_objects.cpp  geometric_objects.h  monte_carlo.cpp  monte_carlo.h  reconstruction.cpp  reconstructor.cpp  reconstructor.h  shower_simulator.cpp  simulator.cpp  simulator.h  utility.cpp  utility.h
cherenkov_simulator.xcodeproj/: project.pbxproj
cherenkov_simulator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cherenkov_simulator.xcodeproj/xcuserdata/Matthew.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cherenkov_simulator.xcodeproj/xcuserdata/Matthew.xcuserdatad/xcschemes/: CherenkovSimulator.xcscheme  xcschememanagement.plist
cherenkov_test/: CMakeLists.txt  DataStructuresTest.cpp  GeometricTest.cpp  Helper.cpp  Helper.h  Helper1.cpp  MiscellaneousTest.cpp  ReconstructorTest.cpp  SampleEvents.cpp  SimulatorTest.cpp  UtilityTest.cpp
cherenkov_tests/: CMakeLists.txt  basic_tests.cpp  helper.cpp  sample_config.xml  test_data_containers.cpp  test_geometric_objects.cpp  test_helper.cpp  test_helper.h  test_miscellaneous.cpp  test_overall.cpp  test_reconstructor.cpp  test_simulator.cpp
cherenkov_tests/google_test/scripts/: common.py  fuse_gtest_files.py  release_docs.py
external_lib/: ExternalLib.cmake
run_output/: Out1-4.csv  Out1.csv  Out10.csv  Out11.csv  Out12.csv  Out13.csv  Out14.csv  Out15.csv  Out2.csv  Out3.csv  Out4.csv  Out5.csv  Out6.csv  Out7.csv  Out8.csv  Out9.csv  OutAll.csv  PlotMacroOut.root  PlotResults.cpp  PlotTree.cpp  PlotTreeOut.root
run_output/default_setup/: NoCut.root  Out1.csv  Out10.csv  Out11.csv  Out12.csv  Out2.csv  Out3.csv  Out4.csv  Out5.csv  Out6.csv  Out7.csv  Out8.csv  Out9.csv  OutAll.csv
run_output/double_height/: Out1.csv  Out2.csv  Out3.csv  Out4.csv  OutAll.csv  Results.root
run_output/double_resolution/: Out2.csv  Out3.csv  Results.root
run_output/increase_height/: NoCut.root  Out1.csv  Out2.csv  Out3.csv  Out4.csv  OutAll.csv
run_output/initial_run/: Results.root
run_output/up_resolution/: Out1.csv  Out4.csv  OutAll.csv  Results.root
thesis/: Thesis.tex
thesis/Chapters/: Discussion.tex  Introduction.tex  Methods.tex  Results.tex
thesis/Formats/: BeginHonors.tex  BeginNormal.tex  EndHonors.tex  FormatHonors.tex  FormatNormal.tex
thesis/Miscellaneous/: Abstract.tex  CandidateInformation.tex  References.bib  TitlePage.tex
